--- a/app/views/coordinator/missions/new.html.erb
+++ b/app/views/coordinator/missions/new.html.erb
@@ -1,4 +1,4 @@
 <%= render 'supervisor/missions/form',
-  title: "Création d'une nouvelle mission",
+  title: "Créer une nouvelle mission",
   url: coordinator_missions_path
 %>
