--- a/app/assets/stylesheets/components/_button_round.scss
+++ b/app/assets/stylesheets/components/_button_round.scss
@@ -24,6 +24,7 @@
       &:hover {
         transform: scale(0.9);
         cursor: pointer;
+        box-shadow: $shadow;
       }
     }
     .capsule-badge {
@@ -34,7 +35,7 @@
       bottom: 5px;
       border-radius: 50%;
       background-color: $blue;
-      font-size: 25px;
+      font-size: 18px;
       display: flex;
       justify-content: center;
       align-items: center;
