--- a/app/views/supervisor/users/show.html.erb
+++ b/app/views/supervisor/users/show.html.erb
@@ -56,19 +56,19 @@
                                                      icon: "fa fa-plus",
                                                      btn_link: new_supervisor_resource_path,
                                                      method: :get,
-                                                     color: "#7CBB9F",
+                                                     color: "#E67E22",
                                                      text: "Ajouter une ressource"} %>
         <%= render "shared/button_round", content: { link: "",
                                                      icon: "fa fa-plus",
                                                      btn_link: new_coordinator_mission_path,
                                                      method: :get,
-                                                     color: "",
+                                                     color: "#7CBB9F",
                                                      text: "Créer une mission"} %>
         <%= render "shared/button_round", content: {
                                                      icon: "fa fa-plus",
                                                      btn_link: "#",
                                                      method: :get,
-                                                     color: "#7CBB9F",
+                                                     color: "#CE1F5B",
                                                      text: "Inviter un coordinateur"} %>
         <% end %>
       </div>
