--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="flex-parent"> <!-- for IE bug -->
-  <div class="fullscreen relative flexbox text-left" style="background-image: linear-gradient(0deg, rgba(42,51,106,0.9) 0%, rgba(42,51,106,0.8) 100%), url('http://res.cloudinary.com/doodlid/image/upload/v1521889808/co-alumni/vecto-map.svg')">
+  <div class="fullscreen under-navbar relative flexbox text-left" style="background-image: linear-gradient(0deg, rgba(42,51,106,0.01) 0%, rgba(42,51,106,0.01) 100%), url('http://res.cloudinary.com/doodlid/image/upload/v1522024812/co-alumni/photo-1470753937643-efeb931202a9.jpg')">
 
     <div class="parentheze-login">
       <%= render 'shared/sign_out_button' %>
