--- a/app/views/shared/_mission_resource_fields.html.erb
+++ b/app/views/shared/_mission_resource_fields.html.erb
@@ -1,5 +1,5 @@
 
 <div class="nested-fields">
   <%= f.association :resource, prompt: "Selectionner une ressource", label: "Ressources associées" %>
-  <%= link_to_remove_association "remove resource", f %>
+  <%= link_to_remove_association "Supprimer la resource ci-dessus", f %>
 </div>
