--- a/app/views/supervisor/resources/_form.html.erb
+++ b/app/views/supervisor/resources/_form.html.erb
@@ -5,7 +5,7 @@
       <%= simple_form_for [:supervisor, resource] do |f| %>
         <%= f.input :name %>
         <%= f.input :description %>
-        <%= f.association :kind %>
+        <%= f.association :kind, prompt: "Selectionner une catégorie" %>
         <%= f.hidden_field :user_id, value: current_user.id %>
         <%= f.input :photo, as: :file %>
         <%= f.button :submit, value:"Ajouter la ressource",  class: 'btn btn-blue center' %>
