Yellow on Ajouter une mission

--- a/app/views/coordinator/users/show.html.erb
+++ b/app/views/coordinator/users/show.html.erb
@@ -80,7 +80,7 @@
                                                      icon: "fa fa-plus",
                                                      btn_link: new_coordinator_mission_path,
                                                      method: :get,
-                                                     color: "",
+                                                     color: "#DFB444",
                                                      text: "Créer une mission"} %>
         <%= render "shared/button_round", content: {
                                                      icon: "fa fa-plus",
