--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="col-md-7 d-flex align-items-center justify-content-around">
           <div>
-            <h2><b>Classement</b></h2>
+            <h2><b>Classement Pays</b></h2>
             <h1><b><%= current_user.str_rank %></b></h1>
           </div>
           <div>
