--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <h4>Missions disponnibles :</h4>
+        <h4>Missions disponibles :</h4>
         <ul class="list-unstyled">
           <%= @resource.missions.find_each do |mission| %>
             <li>
