--- a/app/views/shared/_portrait.html.erb
+++ b/app/views/shared/_portrait.html.erb
@@ -4,7 +4,7 @@
     <h4><%= content[:name] %></h4>
     <h6 class="subtalent"><%= content[:statut] %></h6>
     <%= link_to content[:link] do %>
-      <h6 class="subtalent water-green"><%= "contacter référent" %></h6>
+      <h6 class="subtalent water-green"><%= "details de mon référent" %></h6>
     <% end %>
   </div>
 </div>
