--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .home {
-  background-image: url("vecto-map.svg");
+  background-image: url("http://res.cloudinary.com/doodlid/image/upload/v1522066704/co-alumni/vecto-map.png");
   background-size: cover;
   background-position: center center;
   height: calc(100vh - 70px);
